Nuevo párrafo y README

--- a/Prueba1.html
+++ b/Prueba1.html
@@ -12,6 +12,7 @@
 	<main>
 		<h2> Comando básicos </h2>
 		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui atque, porro aut, suscipit aspernatur, cumque repudiandae doloremque incidunt doloribus excepturi et? Earum vel optio magni magnam placeat laboriosam voluptatem reprehenderit.</p>
+		<p> Soy el segundo párrafo </p>
 	</main>
 </body>
 </html>
